--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "firebase": "^7.20.0",
     "gh-pages": "^3.1.0",
     "node": "^14.3.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "sass": "^1.26.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "sass": "^1.26.5",
+    "scss": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
